# gosling

./: .gitattributes  .gitignore  .goslinghints  AGENTS.md  BUILDING_DOCKER.md  BUILDING_LINUX.md  CONTRIBUTING.md  CONTRIBUTORS.md  CUSTOM_DISTROS.md  Cargo.toml  Dockerfile  EXTRACTION_PLAN.md  GOVERNANCE.md  I18N.md  Justfile  MAINTAINERS.md  README.md  RELEASE.md  RELEASE_CHECKLIST.md  SECURITY.md  UPSTREAM.md  deny.toml  download_cli.ps1  download_cli.sh  flake.nix  plan.md  test_acp_client.py
.architecture/: README.md  components.yaml  invariants.yaml
.devcontainer/: Dockerfile
.giles/: audit_report.yaml  compliance_status.yaml  patch_todo.yaml  remediation_plan.yaml  run_log.jsonl
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/DISCUSSION_TEMPLATE/: qa.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/scripts/: verify-phase1-integrity.sh  verify-phase2-permissions.rb  verify-phase3-container-digests.rb
.github/workflows/: autoclose  build-cli.yml  build-notify.yml  bundle-desktop-intel.yml  bundle-desktop-linux.yml  bundle-desktop-manual.yml  canary.yml  (+28 more)
.planning/: active_skillset.yaml
crates/gosling-sdk/: Cargo.toml  README.md  justfile  uniffi.toml
crates/gosling-sdk/examples/: acp_client.rs
crates/gosling-sdk/examples/uniffi/: Ping.kt  ping.py
crates/gosling-sdk/src/: bindings.rs  lib.rs
crates/gosling-server/: ALLOWLIST.md  Cargo.toml
crates/gosling-server/src/: auth.rs  configuration.rs  error.rs  logging.rs  main.rs  openapi.rs  session_event_bus.rs  state.rs  tls.rs
crates/gosling-server/src/commands/: agent.rs
crates/gosling-server/src/routes/: action_required.rs  agent.rs  config_management.rs  dictation.rs  errors.rs  history_override.rs  mcp_app_proxy.rs  mod.rs  prompts.rs  reply.rs  reply_service.rs  session.rs  session_events.rs  status.rs  telemetry.rs  utils.rs
crates/gosling-server/src/routes/templates/: mcp_app_proxy.html
crates/gosling-server/tests/: tls_test.rs
docs/: INTENT.md  TODO.md  architecture.md
documentation/: .gitignore  .goslinghints  AGENTS.md  DOCUMENTATION_INVENTORY.md  GOOSE_COMPATIBILITY.md  INDEX.md  README.md  STRUCTURE_COMPLIANCE.md  docusaurus.config.ts  package-lock.json  package.json
examples/: frontend_tools.py
oidc-proxy/: README.md  wrangler.toml
reports/: 2026-07-04-rebrand-audit.md  2026-07-06-defect-campaign-log.md  2026-07-06-fresh-comprehensive-audit.md  2026-07-09-architecture-audit.md  2026-07-09-dataflow-security-audit.md  2026-07-09-defect-audit-and-repair.md  2026-07-10-audit-repair-followups.md  2026-07-10-audit-skills-pack-report.md  2026-07-10-defect-campaign-plan.md  2026-07-10-defect-campaign-session-log.md  2026-07-12-tagteam-future-integration-plan.md  2026-07-16-defect-audit-and-repair.md  2026-07-17-defect-campaign-plan.md  2026-07-17-defect-campaign-session-log.md  2026-07-17-exhaustive-defect-audit-checkpoint.md  2026-07-18-audit-repair-campaign.md  2026-07-18-docker-lifecycle-defect-campaign-session-log.md  2026-07-18-forty-lens-comprehensive-audit.md  2026-07-18-forty-lens-comprehensive-findings.json  2026-07-18-gemini-defect-campaign-plan.md  2026-07-18-gemini-defect-campaign-session-log.md  2026-07-18-twelve-lens-agent-skills-audit.md  2026-07-18-twelve-lens-agent-skills-findings.json  2026-07-18-twelve-lens-defect-campaign-plan.md  2026-07-18-twelve-lens-defect-campaign-session-log.md  2026-07-19-acp-large-response-session-resume-repair.md  2026-07-20-live-scenarios-defect-campaign-plan.md  2026-07-20-live-scenarios-defect-campaign-session-log.md  2026-07-20-open-defects-repair-campaign-plan.md  2026-07-20-open-defects-repair-campaign-session-log.md  2026-07-20-play-gsl-defect-campaign-plan.md  2026-07-20-play-gsl-defect-campaign-session-log.md  ADR-2026-07-12-tagteam-workflow.md
scripts/: README.md  build-windows.ps1  diagnostics-viewer.py  gosling-db-helper.sh  parse-benchmark-results.sh  pre-release.sh  run-benchmarks.sh  test_compaction.sh  test_diagnostics_viewer.py  test_mcp.sh  test_subagents.sh  with-rusty-v8-cache.sh
ui/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
(+1252 files in other folders)
