[package]
name = "gosling-sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust SDK for Gosling with optional uniffi bindings for Python/Kotlin"

[lib]
name = "gosling_sdk"
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "gosling-uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
required-features = ["uniffi"]

[features]
default = []
uniffi = ["dep:uniffi", "dep:thiserror"]

[dependencies]
gosling-sdk-types = { path = "../gosling-sdk-types" }
agent-client-protocol = { workspace = true, features = ["unstable"] }
agent-client-protocol-schema = { workspace = true }

uniffi = { version = "0.31", features = ["cli"], optional = true }
thiserror = { version = "2", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "process", "io-std", "io-util"] }
tokio-util = { workspace = true, features = ["compat", "rt"] }

[package.metadata.cargo-machete]
# Used to provide extras imports for agent-client-protocol
ignored = ["agent-client-protocol-schema"]
